@@ -11,7 +11,7 @@ Wishing you good time with CUnit.
 -----------------------------------
 Anil Kumar
 Email         : aksaharan@yahoo.com
-Personal Page : http://www.mycgiserver.com/~anilks/
+Personal Page : http://www.polarhome.com/~aksaharan/
 Project Page  : http://www.sourceforge.net/projects/cunit/
 
 
