@@ -3,7 +3,22 @@ Microsoft Developer Studio Workspace File, Format Version 6.00
 
 ###############################################################################
 
-Project: "CUnit"=.\CUnit\CUnit.dsp - Package Owner=<4>
+Project: "AutomatedTest"=".\EXAMPLES\AutomatedTest\AutomatedTest.dsp" - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+    Begin Project Dependency
+    Project_Dep_Name CUnit
+    End Project Dependency
+}}}
+
+###############################################################################
+
+Project: "CUnit"=".\CUnit\CUnit.dsp" - Package Owner=<4>
 
 Package=<5>
 {{{
@@ -15,7 +30,7 @@ Package=<4>
 
 ###############################################################################
 
-Project: "ConsoleTest"=.\Examples\ConsoleTest\ConsoleTest.dsp - Package Owner=<4>
+Project: "ConsoleTest"=".\Examples\ConsoleTest\ConsoleTest.dsp" - Package Owner=<4>
 
 Package=<5>
 {{{
