@@ -8,7 +8,11 @@ CUnit \- A unit testing framework for C
 .br
 .B #include <CUnit/TestDB.h>
 .br
+.B #include <CUnit/Automated.h>
+.br
 .B #include <CUnit/Console.h>
+.br
+.B #include <CUnit/Curses.h>
 
 .SH "DESCRIPTION"
 CUnit is a combination of the core platform independent framework and platform dependent customization features to provide user interface. The platform indepndent framework consists of the basic functionalities required such as initialization/cleanup of test registry, test groups and test cases. The other part which handles the user interface has the responsibility of only managing user interaction with the system and finally invoke appropriate framework functionality. The most of the functions exposed to the user are declared in the header files defined below,
@@ -21,9 +25,17 @@ This file contains function macro definition for ASSERT which is used in the tes
 .TP 2
 This file contains function declarations to be used for the Maniplating the test registry/test groups/test cases.
 .TP 1
+.B #include <CUnit/Automated.h>
+.TP 2
+This file contains function declarations to be used for the automated run test.
+.TP 1
 .B #include <CUnit/Console.h>
 .TP 2
 This file contains function declarations to be used for the console run test.
+.TP 1
+.B #include <CUnit/Curses.h>
+.TP 2
+This file contains function declarations to be used for the curses run test.
 .TP 1
 The basic hierarchichal organization of CUnit is as depicted below,
 
@@ -66,7 +78,9 @@ for running tests with console user interaction.
 .BR "ASSERT" (3),
 .BR "add_test_case" (3),
 .BR "add_test_group" (3),
+.BR "automated_run_tests" (3),
 .BR "console_run_tests" (3),
+.BR "curses_run_tests" (3),
 .BR "cleanup_registry" (3),
 .BR "initialize_registry" (3), 
 .BR "get_registry" (3),
