@@ -1,10 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(CUnit/Sources/Framework/AssertImpl.c)
-AM_INIT_AUTOMAKE(CUnit, 1.0-4)
+AM_INIT_AUTOMAKE(CUnit, 1.0-5)
 
 PACKAGE=CUnit
 VERSION=1.0
-RELEASE=4
+RELEASE=5
 
 TOPDIR=`pwd`
 
@@ -27,6 +27,7 @@ AC_CHECK_HEADERS(assert.h)
 AC_CHECK_HEADERS(ctype.h)
 AC_CHECK_HEADERS(curses.h)
 AC_CHECK_HEADERS(math.h)
+AC_CHECK_HEADERS(file.h)
 AC_CHECK_HEADERS(stdio.h)
 AC_CHECK_HEADERS(stdlib.h)
 AC_CHECK_HEADERS(string.h)
@@ -44,9 +45,11 @@ AC_OUTPUT( Makefile \
 		  CUnit/Headers/Makefile \
 		  CUnit/Sources/Makefile \
 		  CUnit/Sources/Framework/Makefile \
+		  CUnit/Sources/Automated/Makefile \
 		  CUnit/Sources/Console/Makefile \
 		  CUnit/Sources/Curses/Makefile \
 		  Examples/Makefile \
+		  Examples/AutomatedTest/Makefile \
 		  Examples/ConsoleTest/Makefile \
 		  Examples/CursesTest/Makefile \
 		  Man/Makefile \
